--- a/src/locales/ko-KR.po
+++ b/src/locales/ko-KR.po
@@ -363,8 +363,8 @@ msgid "By adding liquidity you'll earn 0.3% of all trades on this pair proportio
 msgstr "유동성을 추가하면 풀 쉐어에 비례하여이 쌍에 대한 모든 거래의 0.3%를 벌 수 있습니다. 수수료는 풀에 추가되고 실시간으로 발생하며 유동성을 인출하여 청구할 수 있습니다."
 
 #: src/components/WalletModal/index.tsx
-msgid "By connecting a wallet, you agree to Uniswap Labs’ <0>Terms of Service</0> and consent to its <1>Privacy Policy</1>."
-msgstr "지갑을 연결하면 Uniswap Labs의 <0>서비스 약관</0> 및 <1>개인 정보 보호 정책</1>에 동의하는 것입니다."
+msgid "By connecting a wallet, you agree to Kroma’ <0>Terms of Service</0> and consent to its <1>Privacy Policy</1>."
+msgstr "지갑을 연결하면 Kroma의 <0>서비스 약관</0> 및 <1>개인 정보 보호 정책</1>에 동의하는 것입니다."
 
 #: src/pages/Vote/styled.tsx
 msgid "Canceled"
@@ -2078,8 +2078,8 @@ msgid "Uniswap Labs' Terms of Service"
 msgstr "Uniswap Labs 서비스 약관"
 
 #: src/components/SwitchLocaleLink/index.tsx
-msgid "Uniswap available in: <0>{0}</0>"
-msgstr "Uniswap 사용 가능 : <0>{0}</0>"
+msgid "Swap available in: <0>{0}</0>"
+msgstr "언어 설정 : <0>{0}</0>"
 
 #: src/components/vote/ProposalEmptyState.tsx
 msgid "Uniswap governance is only available on Layer 1. Switch your network to Ethereum Mainnet to view Proposals and Vote."
